Fixed issue in editor, made changes to items where text would overflow.

--- a/app/assets/sass/item.sass
+++ b/app/assets/sass/item.sass
@@ -16,6 +16,9 @@
     button
       width: 100%
       padding: 0
+  .content, .description
+    max-width: 100%
+    word-break: break-all
   .owner
     margin: 0
     padding: 10px
@@ -39,3 +42,6 @@
     .other
       min-height: 40px
       @include center-center
+  .comment-creator
+    .input
+      width: 100%
